--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "resume-15-7",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "git@github.com:FrankFang/resume-15-7.git",
+  "author": "Charles <1309571292@qq.com>",
+  "license": "MIT",
   "dependencies": {
-    "leancloud-storage": "^3.5.0"
+    "babel": "^6.23.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
