--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel": "^6.23.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "webpack": "^5.40.0"
   }
 }
