--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "webpack": "3.10.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.2.2"
   }
 }
